--- a/app/views/matiawases/index.html.erb
+++ b/app/views/matiawases/index.html.erb
@@ -9,6 +9,7 @@
       <th>Iconselect</th>
       <th>Latitude</th>
       <th>Longitude</th>
+      <th>Devicetoken</th>
       <th></th>
       <th></th>
       <th></th>
@@ -24,6 +25,7 @@
         <td><%= matiawase.iconSelect %></td>
         <td><%= matiawase.latitude %></td>
         <td><%= matiawase.longitude %></td>
+        <td><%= matiawase.deviceToken %></td>
         <td><%= link_to 'Show', matiawase %></td>
         <td><%= link_to 'Edit', edit_matiawase_path(matiawase) %></td>
         <td><%= link_to 'Destroy', matiawase, method: :delete, data: { confirm: 'Are you sure?' } %></td>
