--- a/app/views/matiawases/show.html.erb
+++ b/app/views/matiawases/show.html.erb
@@ -30,5 +30,10 @@
   <%= @matiawase.longitude %>
 </p>
 
+<p>
+  <strong>DeviceToken:</strong>
+  <%= @matiawase.deviceToken %>
+</p>
+
 <%= link_to 'Edit', edit_matiawase_path(@matiawase) %> |
 <%= link_to 'Back', matiawases_path %>
