--- a/app/views/matiawases/_form.html.erb
+++ b/app/views/matiawases/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :longitude %><br>
     <%= f.text_field :longitude %>
   </div>
+  <div class="field">
+    <%= f.label :deviceToken %><br>
+    <%= f.text_field :deviceToken %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
