--- a/app/views/matiawases/_form.html.erb
+++ b/app/views/matiawases/_form.html.erb
@@ -36,6 +36,10 @@
     <%= f.text_field :longitude %>
   </div>
   <div class="field">
+    <%= f.label :gpsAccuracy %><br>
+    <%= f.text_field :gpsAccuracy %>
+  </div>
+  <div class="field">
     <%= f.label :deviceToken %><br>
     <%= f.text_field :deviceToken %>
   </div>
