--- a/app/views/matiawases/index.html.erb
+++ b/app/views/matiawases/index.html.erb
@@ -9,6 +9,7 @@
       <th>Iconselect</th>
       <th>Latitude</th>
       <th>Longitude</th>
+      <th>GpsAccuracy</th>
       <th>Devicetoken</th>
       <th></th>
       <th></th>
@@ -25,6 +26,7 @@
         <td><%= matiawase.iconSelect %></td>
         <td><%= matiawase.latitude %></td>
         <td><%= matiawase.longitude %></td>
+        <td><%= matiawase.gpsAccuracy %></td>
         <td><%= matiawase.deviceToken %></td>
         <td><%= link_to 'Show', matiawase %></td>
         <td><%= link_to 'Edit', edit_matiawase_path(matiawase) %></td>
