--- a/app/views/matiawases/show.html.erb
+++ b/app/views/matiawases/show.html.erb
@@ -31,6 +31,11 @@
 </p>
 
 <p>
+  <strong>Gpsaccuracy:</strong>
+  <%= @matiawase.gpsAccuracy %>
+</p>
+
+<p>
   <strong>DeviceToken:</strong>
   <%= @matiawase.deviceToken %>
 </p>
